<package>

  <name>lslidar_n301_driver</name>
  <version>1.2.0</version>
  <description>
    ROS device driver for Leishen N301 lidar.
  </description>
  <maintainer email="support@lslidar.com">Shenzhen Leishen Intelligence System Co, Ltd</maintainer>
  <license>GNU General Public License v3.0</license>
  <url type="website">https://wiki.ros.org/lslidar_n301</url>
  <author>Nick Shu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>diagnostic_updater</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>lslidar_n301_msgs</build_depend>

  <run_depend>diagnostic_updater</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>lslidar_n301_msgs</run_depend>


</package>
